# data

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Doxyfile.in  README  TODO  config.hpp.in  configure.sh  spec.in  wntrdata.pc.in
cmake/: WntrDataConfig.cmake.in
data/ling/: info.pml
data/ling/en/: grammar.xml  node.xml
data/ling/locale/en/: db.json  spawn.xml
data/linguistics/locale/en/: db.xml
data/onto/: user.owl
data/ontology/: core.owl  links.owl
include/wntr/data/: iterator.hpp  linguistics.hpp  md5.hpp  models.hpp  ontology.hpp  serializer.hpp  wntrdata.hpp
src/: CMakeLists.txt  adaptors.cpp  adaptors.hpp  config.hpp  dbus.hpp  dbus.xml  interfaces.cpp  interfaces.hpp  iterator.cpp  lexical.cpp  lexical.hpp  linguistics.cpp  linguistics.hpp  md5.cpp  md5.hpp  models.cpp  models.hpp  ontology.cpp  ontology.hpp  rules.cpp  rules.hpp  serializer.cpp  wntrdata.cpp  wntrdata.hpp
src/ontology/: ontology.cpp  ontology.hpp  query.cpp  query.hpp
